fix page jumping on tab click bug

--- a/static/style.css
+++ b/static/style.css
@@ -140,7 +140,7 @@ h2 {
 }
 
 .tab {
-  text-decoration: none;
+  cursor: pointer;
 }
 
 .tab:hover,
